# Job-Scrapper

./: .env  README.md  cli.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
job_scraper/: __init__.py  analyzer.py  builtin_scraper.py  config.py  excel_writer.py  follow_up_checker.py  scraper.py  todoist_integration.py
job_scraper/config/: __init__.py  excel_config.py  general_config.py  linkedin_config.py  network_config.py
job_scraper/follow_up/: follow_up_checker.py
job_scraper/model/: __init__.py  compensation.py  country.py  description_format.py  job_post.py  job_response.py  job_type.py  location.py  scraper_input.py
job_scraper/scrapers/: linkedin_scraper.py  scraper.py
job_scraper/utils/excel/: excel_reader.py  excel_writer.py
job_scraper/utils/todoist/: __iniy__.py  todoist_integration.py
output/: debug_engineer.txt  debug_java.txt  debug_remote.txt  results.xlsx
